# TCPClient

./: CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui  protocol.cpp  tcpclient.cpp  tcpclient.h  tcpserver.cpp  tcpserver.h
